--- a/Cookbook/new_royal_cookbook_treemap/OEBPS/toc.xhtml
+++ b/Cookbook/new_royal_cookbook_treemap/OEBPS/toc.xhtml
@@ -14,6 +14,7 @@
   <body epub:type="frontmatter">
     <div id="treemap"></div>
     <script src="script/assets/treemap_file.js"></script>
+    <script src="script/assets/treemap_file_1.js"></script>
     <script src="script/treemap.js"></script>
     <nav epub:type="toc">
       <ol>
