--- a/Cookbook/new_royal_cookbook_treemap/OEBPS/285609155383144226_38193-h-0.htm.xhtml
+++ b/Cookbook/new_royal_cookbook_treemap/OEBPS/285609155383144226_38193-h-0.htm.xhtml
@@ -78,9 +78,11 @@ always dependable.</b></i></p>
 <p><br/>
 </p><hr style="width: 65%;"/>
 <h2 id="pgepubid00001">NEW ROYAL COOK BOOK—<i>Index to Recipes</i></h2>
-<div class="center">
+<div class="center" id="table_of_content">
     <div id="treemap"></div>
+    <div id="treemap1"></div>
     <script src="script/assets/treemap_file.js"></script>
+    <script src="script/assets/treemap_file_1.js"></script>
     <script src="script/treemap.js"></script>
 <table style="border-spacing: 0px;padding: 4px;border-width: 0px;">
 <tbody><tr><td style="text-align: left;">Albuminized Orange,</td><td style="text-align: right;"><a href="285609155383144226_38193-h-1.htm.xhtml#Page_46" class="pginternal">46</a></td></tr>
