--- a/Cookbook/new_royal_cookbook_treemap/OEBPS/toc.xhtml
+++ b/Cookbook/new_royal_cookbook_treemap/OEBPS/toc.xhtml
@@ -23,6 +23,62 @@
           <a href="285609155383144226_38193-h-0.htm.xhtml#pgepubid00001" id="np-3">NEW ROYAL COOK BOOK—Index to Recipes</a>
         </li>
         <li>
+          <a href="285609155383144226_38193-h-0.htm.xhtml#treemap" id="toc_treemap">Table of contents</a>
+          <ol>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapcakes" id="toc_treemap_cakes">Cakes</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapdesserts" id="toc_treemap_desserts">Desserts</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapfritters" id="toc_treemap_fritters">Fritters</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemappastry" id="toc_treemap_pastry">Pastry</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapbread" id="toc_treemap_bread">Bread</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapsauces" id="toc_treemap_sauces">Sauces</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapvegetables" id="toc_treemap_vegetables">Vegetables</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapbeverages" id="toc_treemap_beverages">Beverages</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapsoups" id="toc_treemap_soups">Soups</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapmeats" id="toc_treemap_meats">Meats</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapcanning" id="toc_treemap_canning">Canning</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemappies" id="toc_treemap_pies">Pies</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapmuffins" id="toc_treemap_muffins">Muffins</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapbiscuits" id="toc_treemap_biscuits">Biscuits</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapcandies" id="toc_treemap_candies">Candies</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapfish" id="toc_treemap_fish">Fish</a>
+            </li>
+            <li>
+              <a href="285609155383144226_38193-h-0.htm.xhtml#treemapcroquettes" id="toc_treemap_croquettes">Croquettes</a>
+            </li>
+          </ol>
+        </li>
+        <li>
           <a href="285609155383144226_38193-h-0.htm.xhtml#pgepubid00002" id="np-4">SOME SECRETS OF GOOD COOKING</a>
         </li>
         <li>
