--- a/Cookbook/new_royal_cookbook_treemap/OEBPS/285609155383144226_38193-h-0.htm.xhtml
+++ b/Cookbook/new_royal_cookbook_treemap/OEBPS/285609155383144226_38193-h-0.htm.xhtml
@@ -79,28 +79,28 @@ always dependable.</b></i></p>
 <h2 id="pgepubid00001">NEW ROYAL COOK BOOK—<i>Index to Recipes</i></h2>
 <script src="script/d3/d3.js"></script>
 
-<div id="treemap"><a id="treemap"></a></div>
-<div id="treemap_Cakes"><a id="treemapcakes"/></div>
-<div id="treemap_Desserts"><a id="treemapdesserts"/></div>
-<div id="treemap_Fritters"><a id="treemapfritters"/></div>
-<div id="treemap_Pastry"><a id="treemappastry"/></div>
-<div id="treemap_Bread"><a id="treemapbread"/></div>
-<div id="treemap_Sauces"><a id="treemapsauces"/></div>
-<div id="treemap_Vegetables"><a id="treemapvegetables"/></div>
-<div id="treemap_Beverages"><a id="treemapbeverages"/></div>
-<div id="treemap_Soups"><a id="treemapsoups"/></div>
-<div id="treemap_Meats"><a id="treemapmeats"/></div>
-<div id="treemap_Canning"><a id="treemapcanning"/></div>
-<div id="treemap_Pies"><a id="treemappies"/></div>
-<div id="treemap_Muffins"><a id="treemapmuffins"/></div>
-<div id="treemap_Biscuits"><a id="treemapbiscuits"/></div>
-<div id="treemap_Candies"><a id="treemapcandies"/></div>
-<div id="treemap_Fish"><a id="treemapfish"/></div>
-<div id="treemap_Croquettes"><a id="treemapcroquettes"/></div>
 <script src="script/assets/treemap_file.js"></script>
 <script src="script/treemap.js"></script>
 <div class="center">
-    
+
+<div id="treemap"><a id="treemap_return"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return"></a></div>
+<div id="treemap_Cakes"><a id="treemapcakes"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Desserts"><a id="treemapdesserts"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Fritters"><a id="treemapfritters"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Pastry"><a id="treemappastry"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Bread"><a id="treemapbread"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Sauces"><a id="treemapsauces"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Vegetables"><a id="treemapvegetables"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Beverages"><a id="treemapbeverages"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Soups"><a id="treemapsoups"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Meats"><a id="treemapmeats"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Canning"><a id="treemapcanning"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Pies"><a id="treemappies"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Muffins"><a id="treemapmuffins"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Biscuits"><a id="treemapbiscuits"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Candies"><a id="treemapcandies"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Fish"><a id="treemapfish"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
+<div id="treemap_Croquettes"><a id="treemapcroquettes"></a><a href="285609155383144226_38193-h-0.htm.xhtml#treemap_return">Return to Table of Contents</a></div>
 <table style="border-spacing: 0px;padding: 4px;border-width: 0px;">
 <tbody><tr><td style="text-align: left;">Albuminized Orange,</td><td style="text-align: right;"><a href="285609155383144226_38193-h-1.htm.xhtml#Page_46" class="pginternal">46</a></td></tr>
 <tr><td style="text-align: left;">Almonds, Salted,</td><td style="text-align: right;"><a href="285609155383144226_38193-h-1.htm.xhtml#Salted_Almonds" class="pginternal">44</a></td></tr>
